<resources>
    <string name="app_name">FitZone</string>

    <string name="connexion_titre">Connexion</string>
    <string name="connexion_courriel">Courriel</string>
    <string name="connexion_mot_de_passe">Mot de passe</string>
    <string name="connexion_bouton">Se connecter</string>
    <string name="connexion_lien_inscription">Première utilisation ? Créer un compte</string>
    <string name="connexion_champs_vides">Veuillez remplir tous les champs</string>
    <string name="connexion_identifiants_invalides">Courriel ou mot de passe incorrect</string>

    <string name="inscription_titre">Créer un compte</string>
    <string name="inscription_prenom">Prénom</string>
    <string name="inscription_nom">Nom</string>
    <string name="inscription_telephone">Téléphone</string>
    <string name="inscription_photo">Photo de profil (URL)</string>
    <string name="inscription_bouton">S\'inscrire</string>
    <string name="inscription_courriel_invalide">Courriel invalide</string>
    <string name="inscription_reussie">Compte créé, vous pouvez vous connecter</string>
    <string name="inscription_echec">Impossible de créer le compte</string>

    <string name="accueil_titre">Accueil</string>
    <string name="accueil_progression">Votre progression</string>
    <string name="accueil_bienvenue">Bonjour %1$s</string>
    <string name="accueil_resume">%1$d programmes inscrits | %2$d quiz disponibles</string>
    <string name="accueil_statuts">%1$d soumises | %2$d validées | %3$d en retard | %4$d à faire</string>
    <string name="accueil_mes_programmes">Mes programmes</string>
    <string name="accueil_voir_programmes">Tout voir</string>
    <string name="accueil_seances">Séances à réaliser</string>
    <string name="accueil_echeance">Échéance : %1$s</string>
    <string name="accueil_annonces">Annonces récentes</string>
    <string name="accueil_annonce_programme">%1$s - %2$s</string>
    <string name="accueil_aucune_annonce">Aucune annonce</string>

    <string name="programmes_titre">Mes programmes</string>
    <string name="programmes_recherche">Rechercher par nom ou code</string>
    <string name="programmes_filtre_tous">Tous</string>
    <string name="programmes_filtre_actifs">Actifs</string>
    <string name="programmes_filtre_termines">Terminés</string>
    <string name="programmes_aucun">Aucun programme ne correspond</string>
    <string name="programme_coach">Coach : %1$s</string>

    <string name="nav_accueil">Accueil</string>
    <string name="nav_programmes">Programmes</string>
    <string name="nav_nutrition">Nutrition</string>
    <string name="nav_profil">Profil</string>

    <string name="details_programme_titre">Détails du programme</string>
    <string name="details_description">Description</string>
    <string name="details_annonces">Annonces</string>
    <string name="details_seances">Séances</string>
    <string name="details_quiz">Quiz</string>
    <string name="details_ressources">Ressources</string>
    <string name="details_notes">Notes</string>
    <string name="details_voir_seances">Voir toutes les séances</string>
    <string name="details_voir_quiz">Voir tous les quiz</string>
    <string name="details_aucune_annonce">Aucune annonce pour ce programme.</string>
    <string name="details_aucune_ressource">Aucune ressource supplémentaire.</string>
    <string name="details_aucune_note">Aucune note disponible.</string>
    <string name="details_resume_seances">%1$d séance(s) dans ce programme</string>
    <string name="details_resume_quiz">%1$d quiz dans ce programme</string>
    <string name="details_programme_introuvable">Programme introuvable</string>
    <string name="programme_statut_actif">Actif</string>
    <string name="programme_statut_termine">Terminé</string>

    <string name="seances_titre">Séances</string>
    <string name="seances_aucune">Aucune séance pour ce programme.</string>
    <string name="seance_echeance">Date limite : %1$s</string>
    <string name="seance_disponibilite">Disponible le %1$s</string>
    <string name="seance_note">Note : %1$s</string>
    <string name="seance_note_aucune">Note : non disponible</string>
    <string name="seance_details_titre">Détails de la séance</string>
    <string name="seance_description">Description</string>
    <string name="seance_consignes">Consignes</string>
    <string name="seance_statut">Statut actuel</string>
    <string name="seance_evaluation">Évaluation du coach</string>
    <string name="seance_commentaire">Commentaire : %1$s</string>
    <string name="seance_commentaire_aucun">Aucun commentaire du coach.</string>
    <string name="seance_soumission">Votre soumission</string>
    <string name="seance_contenu_indice">Lien URL ou compte-rendu d\'entraînement</string>
    <string name="seance_marquer_soumise">Marquer comme soumise</string>
    <string name="seance_mettre_a_jour">Mettre à jour la soumission</string>
    <string name="seance_soumise_le">Soumise le %1$s</string>
    <string name="seance_contenu_requis">Saisissez un lien ou un compte-rendu.</string>
    <string name="seance_soumission_reussie">Séance marquée comme soumise.</string>
    <string name="seance_disponible_le">Cette séance sera disponible le %1$s.</string>
    <string name="seance_soumission_indisponible">Cette séance n\'est pas encore disponible.</string>
    <string name="seance_introuvable">Séance introuvable</string>

    <string name="quiz_liste_titre">Quiz</string>
    <string name="quiz_aucun">Aucun quiz pour ce programme.</string>
    <string name="quiz_questions">%1$d question(s)</string>
    <string name="quiz_non_commence">Non commencé</string>
    <string name="quiz_termine">Terminé</string>
    <string name="quiz_score_court">Score : %1$d/%2$d</string>
    <string name="quiz_titre">Quiz</string>
    <string name="quiz_valider">Valider mes réponses</string>
    <string name="quiz_toutes_reponses">Répondez à toutes les questions avant de valider.</string>
    <string name="quiz_resultat">Résultat : %1$d/%2$d (%3$d%%)</string>
    <string name="quiz_resultat_enregistre">Résultat enregistré localement.</string>
    <string name="quiz_introuvable">Quiz introuvable</string>
    <string name="quiz_numero_question">%1$d. %2$s</string>

    <string name="nutrition_titre">Conseils nutritionnels</string>
    <string name="nutrition_calories">Environ %1$d kcal</string>
    <string name="nutrition_moment">Idéal : %1$s</string>
    <string name="nutrition_aucun">Aucun conseil nutritionnel disponible.</string>

    <string name="profil_titre">Mon profil</string>
    <string name="profil_prenom">Prénom</string>
    <string name="profil_nom">Nom</string>
    <string name="profil_courriel">Courriel</string>
    <string name="profil_courriel_aide">Le courriel ne peut pas être modifié.</string>
    <string name="profil_telephone">Téléphone</string>
    <string name="profil_photo">Photo de profil (URL)</string>
    <string name="profil_mot_de_passe">Nouveau mot de passe</string>
    <string name="profil_mot_de_passe_aide">Laissez vide pour conserver le mot de passe actuel.</string>
    <string name="profil_modifier">Modifier le profil</string>
    <string name="profil_annuler">Annuler</string>
    <string name="profil_deconnexion">Se déconnecter</string>
    <string name="profil_progression">Progression</string>
    <string name="profil_nom_complet">%1$s %2$s</string>
    <string name="profil_stat_indisponible">-</string>
    <string name="profil_seances_reussies">Séances\nréussies</string>
    <string name="profil_programmes_termines">Programmes\nterminés</string>
    <string name="profil_note_moyenne">Note\nmoyenne</string>
    <string name="profil_stat_nombre">%1$d</string>
    <string name="profil_stat_pourcentage">%1$d %%</string>
    <string name="profil_enregistrer">Confirmer les modifications</string>
    <string name="profil_champs_requis">Le prénom, le nom et le téléphone sont requis.</string>
    <string name="profil_enregistre">Profil mis à jour.</string>
    <string name="profil_session_invalide">Aucun utilisateur connecté.</string>
    <string name="erreur_chargement">Erreur lors du chargement des données</string>
</resources>
